KAAV-1473 fix z-index issue and change border color

--- a/src/components/ProjectTimeline/VisTimeline.scss
+++ b/src/components/ProjectTimeline/VisTimeline.scss
@@ -16,7 +16,7 @@
     .vis-timeline {
         border-top: none;
         border-bottom: none;
-        border-color: $color-black-20;
+        border-color: #ccc;
         overflow-y: visible !important;
         overflow-x: clip !important;
         .vis-vertical .vis-current-time {
@@ -268,6 +268,7 @@
         border-color: #1a1a1a;
         height: 4px;
         top: 15.5px !important;
+        z-index: 100;
     }
 
     .vis-dot{
